--- a/index.html
+++ b/index.html
@@ -186,41 +186,44 @@
 <script>
     const grids = [{
         wordsToFind: [
-            { word: "HUNGRYCATERPILLAR", isSpangram: true },
-            { word: "APPLE", isSpangram: false },
-            { word: "SALAMI", isSpangram: false },
-            { word: "WATERMELON", isSpangram: false },
-            { word: "PICKLE", isSpangram: false },
-            { word: "LEAF", isSpangram: false }
+            { word: "SOLAIRES", isSpangram: true },
+            { word: "EQUINOXE", isSpangram: false },
+            { word: "ECLIPSE", isSpangram: false },
+            { word: "CLIMAT", isSpangram: false },
+            { word: "HEURE", isSpangram: false },
+            { word: "LEVER", isSpangram: false },
+            { word: "JAUNE", isSpangram: false },
+            { word: "DORE", isSpangram: false }
         ],
         gridLetters: [
-            ["S", "L", "M", "I", "A", "P"],
-            ["A", "A", "N", "G", "L", "P"],
-            ["H", "U", "A", "T", "R", "E"],
-            ["E", "W", "L", "O", "E", "Y"],
-            ["L", "P", "E", "N", "R", "C"],
-            ["K", "C", "I", "M", "A", "R"],
-            ["A", "F", "E", "T", "L", "A"],
-            ["E", "L", "R", "P", "I", "L"]
+            ["L", "I", "M", "R", "E", "U"],
+            ["C", "A", "D", "O", "N", "A"],
+            ["T", "L", "A", "L", "E", "J"],
+            ["E", "R", "I", "E", "O", "S"],
+            ["V", "E", "R", "E", "C", "L"],
+            ["S", "E", "H", "S", "P", "I"],
+            ["E", "E", "E", "Q", "N", "E"],
+            ["R", "U", "U", "I", "O", "X"]
         ]
     },{
         wordsToFind: [
-            { word: "HUNGRYCATERPILLAR", isSpangram: true },
-            { word: "APPLE", isSpangram: false },
-            { word: "AALAMI", isSpangram: false },
-            { word: "WATERMELON", isSpangram: false },
-            { word: "PICKLE", isSpangram: false },
-            { word: "LEAF", isSpangram: false }
+            { word: "RAYONNANTE", isSpangram: true },
+            { word: "LUMINEUX", isSpangram: false },
+            { word: "ESTIVALE", isSpangram: false },
+            { word: "PLANETE", isSpangram: false },
+            { word: "SOLEIL", isSpangram: false },
+            { word: "OMBRE", isSpangram: false },
+            { word: "NUIT", isSpangram: false }
         ],
         gridLetters: [
-            ["A", "L", "M", "I", "A", "P"],
-            ["A", "A", "N", "G", "L", "P"],
-            ["H", "U", "A", "T", "R", "E"],
-            ["E", "W", "L", "O", "E", "Y"],
-            ["L", "P", "E", "N", "R", "C"],
-            ["K", "C", "I", "M", "A", "R"],
-            ["A", "F", "E", "T", "L", "A"],
-            ["E", "L", "R", "P", "I", "L"]
+            ["I", "T", "U", "E", "I", "M"],
+            ["U", "X", "O", "Y", "N", "U"],
+            ["N", "N", "I", "T", "A", "L"],
+            ["N", "V", "E", "S", "E", "R"],
+            ["M", "A", "A", "L", "E", "E"],
+            ["B", "O", "N", "T", "E", "T"],
+            ["R", "E", "L", "O", "N", "A"],
+            ["L", "I", "E", "S", "L", "P"]
         ]
     }];
 
