--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         explosion: 5,
         autoresize: false,
         brightness: { min: 50, max: 80 },
-        boundaries: { top: 0, bottom: container.clientHeight, left: 0, right: container.clientWidth },
+        boundaries: { top: 0, bottom: fireworksContainer.clientHeight, left: 0, right: fireworksContainer.clientWidth },
         sound: { enable: true, files: ['explosion0.mp3', 'explosion1.mp3', 'explosion2.mp3'], volume: { min: 4, max: 8 } }
     });
 
