--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
     let foundWords = [];
     let selectedGrid = grids[0];
     let currentGrid = -1;
+    let fireworks = null;
     const gridElement = document.getElementById("grid");
     const gridSelector = document.getElementById('gridSelector');
 
@@ -386,7 +387,24 @@
     function showCongratulations() {
         document.getElementById('congratulations').style.display = 'block';
 
-        const container = document.getElementById('congratulations');
+        if(!fireworks) {
+            const container = document.getElementById('congratulations');
+            const fireworks = new Fireworks.default(container, {
+                hue: { min: 0, max: 360 },
+                rocketsPoint: 50, 
+                speed: 2,
+                acceleration: 1.05,
+                friction: 0.98,
+                gravity: 1.5,
+                particles: 100,
+                trace: 3,
+                explosion: 5,
+                autoresize: false,
+                brightness: { min: 50, max: 80 },
+                boundaries: { top: 0, bottom: container.clientHeight, left: 0, right: container.clientWidth },
+                sound: { enable: true, files: ['explosion0.mp3', 'explosion1.mp3', 'explosion2.mp3'], volume: { min: 4, max: 8 } }
+            });
+        }
         fireworks.start();
 
         setTimeout(() => {
@@ -419,23 +437,6 @@
             alert("Vous avez terminé toutes les grilles disponibles !");
             hideCongratulations();
         }
-    });
-
-    const fireworksContainer = document.getElementById('congratulations');
-    const fireworks = new Fireworks.default(fireworksContainer, {
-        hue: { min: 0, max: 360 },
-        rocketsPoint: 50, 
-        speed: 2,
-        acceleration: 1.05,
-        friction: 0.98,
-        gravity: 1.5,
-        particles: 100,
-        trace: 3,
-        explosion: 5,
-        autoresize: false,
-        brightness: { min: 50, max: 80 },
-        boundaries: { top: 0, bottom: fireworksContainer.clientHeight, left: 0, right: fireworksContainer.clientWidth },
-        sound: { enable: true, files: ['explosion0.mp3', 'explosion1.mp3', 'explosion2.mp3'], volume: { min: 4, max: 8 } }
     });
 
     populateGridSelector();
