--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             updateCounter();
 
             selectedCells.forEach(cell => {
-                cell.addEventListener('dblclick', function () {
+                cell.addEventListener('taphold', function () {
                     removeWord(selectedWord);
                 });
             });
