--- a/index.html
+++ b/index.html
@@ -231,6 +231,26 @@
             ["R", "E", "L", "O", "N", "A"],
             ["L", "I", "E", "S", "L", "P"]
         ]
+    },{
+        wordsToFind: [
+            { word: "HAPPYBIRTHDAY", isSpangram: true },
+            { word: "CONFETTIS", isSpangram: false },
+            { word: "CARTE", isSpangram: false },
+            { word: "AMOUR", isSpangram: false },
+            { word: "FETE", isSpangram: false },
+            { word: "CADEAUX", isSpangram: false },
+            { word: "TOAST", isSpangram: false }
+        ],
+        gridLetters: [
+            ["C", "O", "H", "T", "O", "T"],
+            ["F", "N", "A", "P", "A", "S"],
+            ["E", "T", "T", "P", "Y", "E"],
+            ["S", "I", "I", "B", "D", "A"],
+            ["C", "R", "T", "A", "C", "U"],
+            ["R", "A", "E", "H", "D", "X"],
+            ["R", "T", "A", "A", "T", "F"],
+            ["U", "O", "M", "Y", "E", "E"]
+        ]
     }];
 
     let selectedCells = [];
